--- a/src/pages/Popup/pages/trends/trends.scss
+++ b/src/pages/Popup/pages/trends/trends.scss
@@ -1,10 +1,24 @@
 .page-trend {
   padding: 20px;
+  font-family: 'DM Sans';
+
+  .font-bold {
+    font-family: 'DMSans-Bold';
+
+    &.italic {
+      font-family: 'DMSans-BoldItalic';
+    }
+  }
+
 
   .page-content {
-    height: 486px;
+    height: 520px;
     overflow: auto;
     padding-bottom: 60px;
+  }
+
+  .page-content.page-content-scroll {
+    height: 486px;
   }
 
   .text1 {
@@ -406,11 +420,12 @@
   width: 100%;
   height: 44px;
   background-image: url('./images/go.png');
-  background-size: 100% 100%;
-  background-position: left top;
+  background-size: 321px 100%;
+  background-position: -1px top;
   background-repeat: no-repeat;
   padding-right: 13px;
   color: #3F4664;
+  margin-top: -3px;
 
   .img1 {
     display: block;
