--- a/src/pages/Popup/public/fonts.css
+++ b/src/pages/Popup/public/fonts.css
@@ -9,6 +9,11 @@
 }
 
 @font-face {
+  font-family: DMSans-BoldItalic;
+  src: url('./fonts/DMSans-BoldItalic.ttf');
+}
+
+@font-face {
   font-family: DM Sans;
   src: url('./fonts/DMSans-Regular.ttf');
 }
