--- a/src/pages/Popup/pages/trends/trends.scss
+++ b/src/pages/Popup/pages/trends/trends.scss
@@ -258,7 +258,7 @@
 
 .volume-wrap {
   width: 154px;
-  height: 119px;
+  min-height: 119px;
   background-color: #FFFFFF;
   border-radius: 4px;
 }
