--- a/src/pages/Content/components/rank/trends.scss
+++ b/src/pages/Content/components/rank/trends.scss
@@ -90,6 +90,7 @@
 
 
 .price-item {
+  font-family: 'DM Sans';
   width: 100%;
   height: 103px;
   border-radius: 4px;
@@ -109,27 +110,31 @@
   }
 
   .num {
-    background: linear-gradient(0deg, #F9F9F9, #F9F9F9), #FFFFFF;
+    background: linear-gradient(0deg, #F2F2F2, #F2F2F2), #FFFFFF;
+    ;
     border-radius: 4px 0px;
     height: 21px;
     min-width: 46px;
-    color: #7F8792;
+    color: #3B3B3B;
     text-shadow: 1px 1px 0px #FFFFFF;
   }
 
   .num1 {
-    background: linear-gradient(0deg, rgba(255, 199, 0, 0.1), rgba(255, 199, 0, 0.1)), #FFFFFF;
-    color: #FFC700;
+    background: linear-gradient(180deg, #FFC700 0%, #FFBA35 100%), #FFFFFF;
+    ;
+    color: #ffffff;
   }
 
   .num2 {
-    background: linear-gradient(0deg, #EEEEEE, #EEEEEE), #FFFFFF;
-    color: #212121;
+    background: linear-gradient(180deg, #B0B1BE 0%, #A9ABB7 100%), #FFFFFF;
+    ;
+    color: #FFFFFF;
   }
 
   .num3 {
-    background: linear-gradient(0deg, rgba(249, 221, 193, 0.41), rgba(249, 221, 193, 0.41)), #FFFFFF;
-    color: #CAA17C;
+    background: linear-gradient(180deg, #EAC0A3 0%, #E69C6D 100%), #FFFFFF;
+    ;
+    color: #FFFFFF;
   }
 
   .price-item-content {
