Feat: open new page

--- a/src/pages/Content/components/rank/trends.scss
+++ b/src/pages/Content/components/rank/trends.scss
@@ -121,20 +121,20 @@
 
   .num1 {
     background: linear-gradient(180deg, #FFC700 0%, #FFBA35 100%), #FFFFFF;
-    ;
     color: #ffffff;
+    font-weight: 400;
   }
 
   .num2 {
     background: linear-gradient(180deg, #B0B1BE 0%, #A9ABB7 100%), #FFFFFF;
-    ;
     color: #FFFFFF;
+    font-weight: 400;
   }
 
   .num3 {
     background: linear-gradient(180deg, #EAC0A3 0%, #E69C6D 100%), #FFFFFF;
-    ;
     color: #FFFFFF;
+    font-weight: 400;
   }
 
   .price-item-content {
