--- a/src/pages/Popup/pages/trends/trends.scss
+++ b/src/pages/Popup/pages/trends/trends.scss
@@ -145,11 +145,20 @@
 
   &.top-account-item {
     .img-wrap {
-      padding: 5px 7px;
-      background-image: url('./images/avatar_bg.png');
-      background-position: left top;
-      background-size: 100% 100%;
-      background-repeat: no-repeat;
+      position: relative;
+      padding: 0;
+
+      .img-bg {
+        background-image: url('./images/avatar_bg.png');
+        background-position: left top;
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
 
       img {
         width: auto;
