--- a/src/pages/Popup/pages/trends/trends.scss
+++ b/src/pages/Popup/pages/trends/trends.scss
@@ -399,12 +399,25 @@
 
 .owner-wrap {
   .owner-img {
-    padding: 7px 5px;
-    background-image: url('./images/avatar_bg.png');
+    // padding: 7px 5px;
+    // background-image: url('./images/avatar_bg.png');
     background-position: left top;
     background-size: 100% 100%;
     width: 88px;
     height: 116px;
+    position: relative;
+
+    .img-bg {
+      background-image: url('./images/avatar_bg.png');
+      background-position: left top;
+      background-size: 100% 100%;
+      background-repeat: no-repeat;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
 
     img {
       max-width: 100%;
