--- a/src/pages/Content/components/rank/trends.scss
+++ b/src/pages/Content/components/rank/trends.scss
@@ -13,6 +13,10 @@
     font-family: 'DMSans-Medium';
   }
 
+  .inferer-rank-title.font-medium {
+    font-family: 'Poppins-Medium';
+  }
+
 
   .page-content {
     height: 520px;
